--- a/src/style/chat/chat.scss
+++ b/src/style/chat/chat.scss
@@ -1,9 +1,85 @@
-body{
-  background-color: yellow;
+.chatList {
+  width: 1000px;
+  height: 700px;
+  border: 1px solid #CCC;
+  margin: 0 auto;
+  text-align: none;
+  display: flex;
+  &>div{
+    flex: 1;
+  }
+  .chatList_left{
+    border-right: 1px solid #CCC;
+    padding: 10px;
+    height: 100%;
+  }
 }
 
-div{
-  width: 100px;
-  height: 100px;
-  background-color: yellow;
+.chatList_header {
+  position: relative;
+  span {
+    cursor: pointer;
+    padding: 5px;
+    position: absolute;
+    right: 10px;
+  }
+}
+
+.chatList_inner {
+  margin-top: 40px;
+  overflow-y: scroll;
+  height: 640px;
+  .chatList_inner_listType {
+    text-align: left;
+    .chatList_inner_listType_type {
+      cursor: pointer;
+      display: inline-block;
+      padding: 8px 15px;
+      font-size: 1.5em;
+      font-weight: 600;
+    }
+  }
+  .chatList_inner_roomList {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    
+    
+
+    li {
+      clear: both;
+      list-style: none;
+      padding: 10px;
+      display: flex;
+      cursor: pointer;
+      .chatList_inner_chatRoomLink_img {
+        width: 60px;
+        height: 60px;
+        img {
+          border-radius: 50%;
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+      }
+      .chatList_inner_chatRoomLink_contents{
+        margin-left: 10px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        text-align: left;
+        div:first-child{
+          font-size: 1.3em;
+          font-weight: 600;
+        }
+        div:last-child{
+          color: #AAA;
+        }
+      }
+      &:hover{
+        background-color: #EEE;
+      }
+    }
+
+  }
 }
