--- a/src/style/register/Register.css
+++ b/src/style/register/Register.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .inner {
   width: 60%;
   margin: 0 auto;
@@ -31,8 +32,70 @@ fieldset .inputContainer {
   padding: 2rem 0;
   border-bottom: 1px solid rgb(218, 218, 218);
 }
+fieldset .inputContainer:last-child {
+  margin-bottom: 50px;
+}
+fieldset .inputContainer .formRadio {
+  display: flex;
+}
+fieldset .inputContainer .formRadio label {
+  margin-right: 20px;
+}
+fieldset .inputContainer .formRadio.deliver {
+  width: 100%;
+}
+fieldset .inputContainer input[type=radio] {
+  position: relative;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  opacity: 30%;
+  margin: 10px;
+  padding: 0;
+  cursor: pointer;
+}
+fieldset .inputContainer input[type=radio]:hover::before {
+  background-color: #dddddd;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  border: 2px solid #858585;
+}
+fieldset .inputContainer input[type=radio]:checked {
+  opacity: 1;
+  accent-color: red;
+}
+fieldset .inputContainer input[type=radio]:checked::before {
+  content: "";
+  border: none;
+}
+fieldset .inputContainer input[type=radio]::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 90%;
+  height: 90%;
+  border-radius: 50%;
+  border: 2px solid #858585;
+  box-sizing: border-box;
+}
 fieldset .inputContainer div:nth-child(2) {
+  position: relative;
   width: calc(100% - 200px);
+}
+fieldset .inputContainer div:nth-child(2) .notice {
+  display: block;
+  width: 100%;
+  color: rgb(245, 126, 0);
+  font-size: 14px;
+  margin-top: 0.5rem;
+  align-items: center;
+  text-align: left;
+}
+fieldset .inputContainer div:nth-child(2) .notice i {
+  margin-right: 10px;
 }
 fieldset .inputContainer div:nth-child(2) .categoryNotice {
   display: block;
@@ -51,41 +114,87 @@ fieldset .inputContainer div:nth-child(2) .choiceCategory {
   font-weight: 400;
   color: rgb(216, 12, 24);
 }
-fieldset .inputContainer div:nth-child(2) .choiceCategory b {
+fieldset .inputContainer div:nth-child(2) .choiceCategory span {
   font-weight: 600;
 }
-fieldset .inputContainer div:nth-child(2) .productRadio {
+fieldset .inputContainer div:nth-child(2) label {
   display: flex;
   line-height: 125%;
   color: rgb(25, 25, 25);
   align-items: center;
+  cursor: pointer;
+}
+fieldset .inputContainer div:nth-child(2) label.productRadio {
+  -webkit-box-align: center;
   position: relative;
   margin-right: 2rem;
   margin-bottom: 15px;
-  cursor: pointer;
 }
-fieldset .inputContainer div:nth-child(2) .productRadio:last-child {
+fieldset .inputContainer div:nth-child(2) label.productRadio:last-child {
   margin-bottom: 0;
 }
-fieldset .inputContainer div:nth-child(2) .productRadio span {
+fieldset .inputContainer div:nth-child(2) label.productRadio span {
   margin-left: 8px;
   font-size: 14px;
   margin-top: 3px;
   color: rgb(102, 102, 102);
 }
-fieldset .inputContainer div:nth-child(2) .productRadio input[type=radio] {
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  opacity: 30%;
-  margin: 10px;
-  border: none;
-  padding: 0;
-  border: 1px solid #cfcfcf;
+fieldset .inputContainer div:nth-child(2) b {
+  display: block;
+  width: 100%;
+  color: rgb(102, 102, 102);
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 180%;
 }
-fieldset .inputContainer div:nth-child(2) .productRadio input[type=radio]:checked {
-  opacity: 1;
-  accent-color: red;
+fieldset .inputContainer div:nth-child(2) b.marginT {
+  margin-top: 8px;
+}
+fieldset .inputContainer div:nth-child(2) .infoNoticeTxt {
+  pointer-events: none;
+  position: absolute;
+  top: 0px;
+  padding: 1rem;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 150%;
+  color: rgb(153, 153, 153);
+}
+fieldset .inputContainer div:nth-child(2) .infoNoticeTxt span {
+  display: inline-block;
+  margin-top: 8px;
+  font-size: 12px;
+}
+fieldset .inputContainer textarea {
+  width: 100%;
+  resize: none;
+  border-radius: 2px;
+  border: 1px solid rgb(204, 204, 204);
+  box-sizing: border-box;
+  padding: 1rem;
+}
+fieldset .inputContainer textarea.on {
+  outline: 1px solid rgb(245, 126, 0) !important;
+}
+fieldset .inputContainer .infoNotice {
+  display: flex;
+}
+fieldset .inputContainer .priceInput {
+  position: relative;
+  width: 400px;
+  margin-bottom: 10px;
+}
+fieldset .inputContainer .priceInput::after {
+  content: "원";
+  position: absolute;
+  right: 14px;
+  top: 14px;
+  font-size: 16px;
+  font-weight: 400;
+  color: rgb(153, 153, 153);
+}
+fieldset .inputContainer .priceInput.quantity::after {
+  content: "개";
 }
 fieldset .inputContainer div.nameInput {
   display: flex;
@@ -93,32 +202,11 @@ fieldset .inputContainer div.nameInput {
 }
 fieldset .inputContainer div.nameInput #productName {
   width: 90%;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 125%;
-  color: rgb(25, 25, 25);
-  border-radius: 2px;
-  border: 1px solid rgb(204, 204, 204);
-}
-fieldset .inputContainer div.nameInput #productName.on {
-  outline: 1px solid rgb(245, 126, 0) !important;
 }
 fieldset .inputContainer div.nameInput span {
   width: 10%;
   line-height: 45px;
   text-align: right;
-}
-fieldset .inputContainer div.nameInput .notice {
-  display: block;
-  width: 100%;
-  color: rgb(245, 126, 0);
-  font-size: 14px;
-  margin-top: 0.5rem;
-  align-items: center;
-  text-align: left;
-}
-fieldset .inputContainer div.nameInput .notice i {
-  margin-right: 10px;
 }
 fieldset .inputContainer div .register {
   display: flex;
@@ -190,8 +278,18 @@ fieldset .inputContainer div.sellerLocation input {
   width: 100%;
 }
 fieldset .inputContainer input {
+  width: 100%;
   height: 45px;
   padding: 0 1rem;
+  font-size: 14px;
+  line-height: 125%;
+  color: rgb(25, 25, 25);
+  border-radius: 2px;
+  border: 1px solid rgb(204, 204, 204);
+  box-sizing: border-box;
+}
+fieldset .inputContainer input.on {
+  outline: 1px solid rgb(245, 126, 0) !important;
 }
 fieldset .inputContainer .inputTitle {
   width: 200px;
@@ -257,4 +355,52 @@ fieldset .inputContainer .imgExplain {
   line-height: 180%;
   font-size: 14px;
   font-weight: 400;
+}
+fieldset .inputContainer.borderNone {
+  border: none;
+}
+
+form {
+  position: relative;
+}
+form .submitBar {
+  position: sticky;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100px;
+  background: rgb(246, 246, 246);
+  box-shadow: rgb(229, 229, 229) 0px -1px 0px 0px;
+  z-index: 10;
+}
+form .submitBar ul {
+  display: flex;
+  height: 100%;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 14px;
+  margin: 0 auto;
+}
+form .submitBar ul button {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box;
+  padding: 16px 45px;
+  border-radius: 2px;
+  border: 1px solid rgb(229, 229, 229);
+  background: rgb(255, 255, 255);
+  color: rgb(102, 102, 102);
+  font-size: 18px;
+  font-weight: 700;
+}
+form .submitBar ul button:hover {
+  background-color: #f7f7f7;
+}
+form .submitBar ul button.submit {
+  background: rgb(216, 12, 24);
+  color: #fff;
+}
+form .submitBar ul button.submit:hover {
+  background: rgb(190, 14, 26);
 }/*# sourceMappingURL=Register.css.map */
