--- a/src/style/register/Register.scss
+++ b/src/style/register/Register.scss
@@ -35,8 +35,87 @@ fieldset {
     padding: 2rem 0;
     border-bottom: 1px solid rgb(218, 218, 218);
 
+    &:last-child {
+      margin-bottom: 50px;
+    }
+
+    .formRadio {
+      display: flex;
+
+      label {
+        margin-right: 20px;
+      }
+
+      &.deliver {
+        width: 100%;
+      }
+    }
+
+    input[type='radio'] {
+      position: relative;
+      width: 20px;
+      height: 20px;
+      border-radius: 50%;
+      opacity: 30%;
+      margin: 10px;
+      padding: 0;
+      cursor: pointer;
+
+      &:hover {
+        &::before {
+          background-color: #dddddd;
+          width: 100%;
+          height: 100%;
+          border-radius: 50%;
+          border: 2px solid #858585;
+        }
+      }
+
+      &:checked {
+        opacity: 1;
+        accent-color: red;
+
+        &::before {
+          content: '';
+          border: none;
+        }
+
+      }
+
+      &::before {
+        content: '';
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 90%;
+        height: 90%;
+        border-radius: 50%;
+        border: 2px solid #858585;
+        box-sizing: border-box;
+
+      }
+
+
+    }
+
     & div:nth-child(2) {
+      position: relative;
       width: calc(100% - 200px);
+
+      .notice {
+        display: block;
+        width: 100%;
+        color: rgb(245, 126, 0);
+        font-size: 14px;
+        margin-top: 0.5rem;
+        align-items: center;
+        text-align: left;
+
+        i {
+          margin-right: 10px;
+        }
+      }
 
       .categoryNotice {
         display: block;
@@ -48,6 +127,7 @@ fieldset {
           font-size: 16px;
           margin-right: 5px;
         }
+
       }
 
       .choiceCategory {
@@ -57,48 +137,120 @@ fieldset {
         font-weight: 400;
         color: rgb(216, 12, 24);
 
-        b {
+        span {
           font-weight: 600;
         }
+
+
+
+
+
+
       }
 
-      .productRadio {
+      label {
         display: flex;
         line-height: 125%;
         color: rgb(25, 25, 25);
-        -webkit-box-align: center;
         align-items: center;
-        position: relative;
-        margin-right: 2rem;
-        margin-bottom: 15px;
         cursor: pointer;
-        &:last-child{
-          margin-bottom: 0;
-        }
-        span {
-          margin-left: 8px;
-          font-size: 14px;
-          margin-top: 3px;
-          color: rgb(102, 102, 102);
-        }
 
-        input[type='radio'] {
-          width: 20px;
-          height: 20px;
-          border-radius: 50%;
-          opacity: 30%;
-          margin: 10px;
-          border: none;
-          padding: 0;
-          border: 1px solid #cfcfcf;
-          &:checked {
-            opacity: 1;
-            accent-color:red;
 
+
+        &.productRadio {
+          -webkit-box-align: center;
+          position: relative;
+          margin-right: 2rem;
+          margin-bottom: 15px;
+
+          &:last-child {
+            margin-bottom: 0;
           }
+
+          span {
+            margin-left: 8px;
+            font-size: 14px;
+            margin-top: 3px;
+            color: rgb(102, 102, 102);
+          }
+
+
+
         }
+      }
+
+      b {
+        display: block;
+        width: 100%;
+        color: rgb(102, 102, 102);
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 180%;
+
+        &.marginT {
+          margin-top: 8px;
+        }
+
 
       }
+
+      .infoNoticeTxt {
+        pointer-events: none;
+        position: absolute;
+        top: 0px;
+        padding: 1rem;
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 150%;
+        color: rgb(153, 153, 153);
+
+        span {
+          display: inline-block;
+          margin-top: 8px;
+          font-size: 12px;
+        }
+      }
+
+    }
+
+    textarea {
+      width: 100%;
+      resize: none;
+      border-radius: 2px;
+      border: 1px solid rgb(204, 204, 204);
+      box-sizing: border-box;
+      padding: 1rem;
+
+      &.on {
+        outline: 1px solid rgb(245, 126, 0) !important;
+      }
+    }
+
+    .infoNotice {
+      display: flex;
+    }
+
+    .priceInput {
+      position: relative;
+      width: 400px;
+      margin-bottom: 10px;
+
+      &::after {
+        content: '원';
+        position: absolute;
+        right: 14px;
+        top: 14px;
+
+        font-size: 16px;
+        font-weight: 400;
+        color: rgb(153, 153, 153);
+      }
+
+      &.quantity::after {
+        content: '개';
+      }
+
+
 
     }
 
@@ -109,17 +261,9 @@ fieldset {
 
         #productName {
           width: 90%;
-          font-size: 16px;
-          font-weight: 400;
-          line-height: 125%;
-          color: rgb(25, 25, 25);
-          border-radius: 2px;
-          border: 1px solid rgb(204, 204, 204);
-
-          &.on {
-            outline: 1px solid rgb(245, 126, 0) !important;
-          }
         }
+
+
 
         span {
           width: 10%;
@@ -127,19 +271,7 @@ fieldset {
           text-align: right;
         }
 
-        .notice {
-          display: block;
-          width: 100%;
-          color: rgb(245, 126, 0);
-          font-size: 14px;
-          margin-top: 0.5rem;
-          align-items: center;
-          text-align: left;
 
-          i {
-            margin-right: 10px;
-          }
-        }
       }
 
       .register {
@@ -231,8 +363,21 @@ fieldset {
     }
 
     input {
+      width: 100%;
       height: 45px;
       padding: 0 1rem;
+      font-size: 14px;
+      line-height: 125%;
+      color: rgb(25, 25, 25);
+      border-radius: 2px;
+      border: 1px solid rgb(204, 204, 204);
+      box-sizing: border-box;
+
+      &.on {
+        outline: 1px solid rgb(245, 126, 0) !important;
+      }
+
+
     }
 
     .inputTitle {
@@ -314,7 +459,65 @@ fieldset {
     }
 
 
+    &.borderNone {
+      border: none;
+    }
 
+  }
+}
 
+form {
+  position: relative;
+
+  .submitBar {
+    position: sticky;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100px;
+    background: rgb(246, 246, 246);
+    box-shadow: rgb(229, 229, 229) 0px -1px 0px 0px;
+    z-index: 10;
+
+    ul {
+      display: flex;
+      height: 100%;
+      -webkit-box-pack: end;
+      justify-content: flex-end;
+      -webkit-box-align: center;
+      align-items: center;
+      gap: 14px;
+      margin: 0 auto;
+
+      button {
+        display: inline-flex;
+        -webkit-box-align: center;
+        align-items: center;
+        -webkit-box-pack: center;
+        justify-content: center;
+        box-sizing: border-box;
+        padding: 16px 45px;
+        border-radius: 2px;
+        border: 1px solid rgb(229, 229, 229);
+        background: rgb(255, 255, 255);
+        color: rgb(102, 102, 102);
+        font-size: 18px;
+        font-weight: 700;
+
+        &:hover {
+          background-color: #f7f7f7;
+        }
+
+        &.submit {
+          background: rgb(216, 12, 24);
+          color: #fff;
+
+          &:hover {
+            background: rgb(190, 14, 26);
+
+          }
+        }
+      }
+    }
   }
 }
