--- a/src/style/chat/chat.scss
+++ b/src/style/chat/chat.scss
@@ -77,34 +77,45 @@
       }
     }
   }
-  .chatList_right{
-    border-left: 1px solid #CCC;
+  .chatList_right {
+    border-left: 1px solid #ccc;
     height: 700px;
-    .chatRoom_header{
-      border-bottom: 1px solid #CCC;
+    .chatRoom_header {
+      border-bottom: 1px solid #ccc;
       height: 50px;
       font-size: 25px;
       font-weight: 600;
       line-height: 50px;
       padding-left: 20px;
-    }
-    .chatLog{
-      height: 570px;
-      overflow-y: scroll;
-      .chat_message{
-        margin: 5px;
-        
-        border: none;
-        
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      button {
+        font-size: 0.5em;
+        margin-right: 10px;
+        border: 1px solid black;
+        border-radius: 3px;
+        height: 30px;
         padding: 5px;
       }
-      .oppo{
+    }
+    .chatLog {
+      height: 570px;
+      overflow-y: scroll;
+      .chat_message {
+        margin: 5px;
+
+        border: none;
+
+        padding: 5px;
+      }
+      .oppo {
         text-align: left;
       }
-      .me{
+      .me {
         text-align: right;
       }
-      span{
+      span {
         display: inline-block;
         text-align: left;
         padding: 5px;
@@ -112,20 +123,19 @@
         overflow-wrap: break-word;
         border-radius: 10px;
         background-color: #f5f5f5;
-        
       }
     }
-    .chatSend{
+    .chatSend {
       height: 80px;
-      border-top: 1px solid #CCC;
+      border-top: 1px solid #ccc;
       display: flex;
       align-items: center;
-      svg{
+      svg {
         margin-left: 10px;
       }
-      textarea{
-        border:none;
-        background-color: #EEE;
+      textarea {
+        border: none;
+        background-color: #eee;
         margin: 0 10px;
         padding: 5px 20px;
         border-radius: 20px;
@@ -136,11 +146,11 @@
         padding: 6px;
         overflow-y: scroll;
         resize: none;
-        &::-webkit-scrollbar{
+        &::-webkit-scrollbar {
           display: none;
         }
       }
-      button{
+      button {
         display: none;
       }
     }
