이미지 등록 from Eum
이미지 파일 fileReader 사용하여 업로드 하면  ui에 보이게 구현

2023-11-21

--- a/src/style/register/Register.css
+++ b/src/style/register/Register.css
@@ -8,6 +8,21 @@
   color: #000;
 }
 
+.imageInputBox {
+  display: flex;
+  flex-wrap: wrap;
+}
+.imageInputBox img {
+  width: 202px;
+  height: 202px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin-left: 10px;
+}
+.imageInputBox .imgExplain {
+  width: 100%;
+}
+
 .ProductRegisterTitle {
   height: 100px;
   color: rgb(25, 25, 25);
