헤더 푸터 로그인,회원가입,qr코드 팝업창 및 회원가입페이지 일부
 헤더, 푸터, 로그인,회원가입 팝업창과 앱다운로드 팝업창, 회원가입페이지
 유효성검사 및 리셋버튼까지 작업 완료

 2023-11-24-오후3시

--- a/src/style/footer/footer.scss
+++ b/src/style/footer/footer.scss
@@ -156,7 +156,7 @@
 
     .termLink {
       display:flex;
-      justify-content: center;
+      justify-content:flex-start;
       align-items: center;
 
       img {
