--- a/src/style/header/header.css
+++ b/src/style/header/header.css
@@ -3,6 +3,7 @@
 header {
   position: sticky;
   top: -38px;
+  z-index: 110;
   /* 헤더탑 -------------------------------------------------------------- */
   /* 헤더메인부분 -------------------------------------------------------------- */
 }
