--- a/src/style/header/header.scss
+++ b/src/style/header/header.scss
@@ -3,6 +3,7 @@
 header{
   position: sticky;
   top:-38px;
+  z-index: 110;
 
   /* 헤더탑 -------------------------------------------------------------- */
   .HeaderTop {
