--- a/src/style/footer/footer.css
+++ b/src/style/footer/footer.css
@@ -130,7 +130,7 @@
 }
 .term .termContent .termLink {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 }
 .term .termContent .termLink img {
