--- a/src/style/popup/downloadqr.css
+++ b/src/style/popup/downloadqr.css
@@ -1,18 +1,28 @@
-.downloadqr {
+.downloadwrap {
   width: 100%;
   height: 100%;
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 100;
+  z-index: 110;
   background-color: rgba(0, 0, 0, 0.6);
+}
+
+.downloadqr {
+  width: 25%;
+  height: 25%;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -100%);
+  z-index: 110;
+  display: block;
 }
 .downloadqr .downloadqrwrap {
   position: relative;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 25%;
+  top: 0;
+  left: 0;
+  width: 100%;
   background-color: #fff;
   border-radius: 5px;
 }
