--- a/src/style/popup/loginpopup.css
+++ b/src/style/popup/loginpopup.css
@@ -1,20 +1,42 @@
-.loginpopup {
+.loginpopupwrap {
   width: 100%;
   height: 100%;
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 100;
+  z-index: 110;
   background-color: rgba(0, 0, 0, 0.6);
+  display: none;
+}
+
+.loginpopup {
+  width: 25%;
+  height: 25%;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -100%);
+  z-index: 110;
+  display: none;
 }
 .loginpopup .loginwrap {
   position: relative;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 30%;
+  top: 0;
+  left: 0;
+  width: 100%;
   background-color: #fff;
   border-radius: 5px;
+}
+.loginpopup .loginwrap .closeBtn {
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
+.loginpopup .loginwrap .closeBtn img {
+  width: 24px;
+  height: 24px;
 }
 .loginpopup .loginwrap .loginContent {
   width: 80%;
@@ -90,6 +112,7 @@
   border-radius: 50px;
   margin-left: 6px;
   position: relative;
+  cursor: pointer;
 }
 .loginpopup .loginwrap .loginContent .loginForm .loginContent .ipsecurity .ipBtn div {
   width: 20px;
@@ -98,14 +121,20 @@
   position: absolute;
   top: 0px;
   left: 0px;
+  transition: all 0.1s;
 }
-.loginpopup .loginwrap .loginContent .loginForm .loginBtn {
+.loginpopup .loginwrap .loginContent .loginForm .loginSignBtns {
   width: 100%;
-  padding: 10px 0;
   margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
+}
+.loginpopup .loginwrap .loginContent .loginForm .loginSignBtns button {
   border-radius: 10px;
   background-color: red;
   color: #fff;
   font-weight: bold;
   font-size: 1.5rem;
+  width: 48%;
+  padding: 6px 0;
 }/*# sourceMappingURL=loginpopup.css.map */
