--- a/src/style/popup/logoutpopup.css
+++ b/src/style/popup/logoutpopup.css
@@ -4,8 +4,9 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 100;
+  z-index: 110;
   background-color: rgba(0, 0, 0, 0.6);
+  display: none;
 }
 .logoutpopup .logoutwrap {
   position: relative;
