--- a/src/style/signup/signup.css
+++ b/src/style/signup/signup.css
@@ -2,4 +2,106 @@
   width: 68%;
   margin: 0 auto;
   padding: 80px 0;
+}
+.signup .signtitle {
+  font-size: 2rem;
+  font-weight: bold;
+}
+.signup .signForm {
+  padding-left: 40px;
+  margin-top: 60px;
+}
+.signup .signForm div {
+  margin-bottom: 30px;
+}
+.signup .signForm div label {
+  font-size: 1.1rem;
+  text-align: center;
+  color: #888;
+  display: inline-block;
+  width: 10%;
+  margin-right: 10px;
+}
+.signup .signForm div input {
+  width: 45%;
+  margin-bottom: 10px;
+  padding: 6px;
+}
+.signup .signForm div p {
+  padding-left: calc(10% + 10px);
+}
+.signup .signForm .signId {
+  width: 100%;
+}
+.signup .signForm .signId .idoverlapcheck {
+  margin-left: 20px;
+  padding: 8px 20px;
+  background-color: #000;
+  color: #fff;
+  border-radius: 5px;
+}
+.signup .signForm .signpasscheck {
+  display: flex;
+  flex-wrap: wrap;
+}
+.signup .signForm .signemail input {
+  width: 30%;
+}
+.signup .signForm .signemail .signemailselect {
+  margin-left: 20px;
+  padding: 6px;
+  width: 20%;
+}
+.signup .signForm .signphone input {
+  width: 20%;
+}
+.signup .signForm .signphone .signphonecheckbox {
+  display: flex;
+}
+.signup .signForm .signphone .signphonecheckbox p {
+  display: flex;
+  align-items: center;
+}
+.signup .signForm .signphone .signphonecheckbox p input {
+  width: 16px;
+  height: 16px;
+  margin-bottom: 0;
+}
+.signup .signForm .signphone .signphonecheckbox p label {
+  width: inherit;
+  padding-left: 10px;
+}
+.signup .signForm .signphone .signphonecheckbox p:nth-of-type(2) {
+  padding-left: 20px;
+}
+.signup .signForm .signcheckbar {
+  position: fixed;
+  z-index: 100;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  text-align: center;
+  margin: 0 auto;
+  padding: 44px 0;
+  display: flex;
+  justify-content: center;
+}
+.signup .signForm .signcheckbar .signcheckBtn {
+  width: 22%;
+  display: flex;
+  justify-content: space-between;
+}
+.signup .signForm .signcheckbar .signcheckBtn button {
+  font-weight: bold;
+  font-size: 1.3rem;
+  padding: 10px 50px;
+  border-radius: 5px;
+  color: #fff;
+}
+.signup .signForm .signcheckbar .signcheckBtn .signcancel {
+  background-color: #aaa;
+}
+.signup .signForm .signcheckbar .signcheckBtn .signcheck {
+  background-color: #000;
 }/*# sourceMappingURL=signup.css.map */
