--- a/src/style/signup/signup.scss
+++ b/src/style/signup/signup.scss
@@ -2,4 +2,136 @@
   width: 68%;
   margin:0 auto;
   padding: 80px 0;
+
+  .signtitle {
+    font-size: 2rem;
+    font-weight: bold;
+  }
+
+  .signForm {
+    padding-left: 40px;
+    margin-top: 60px;
+
+    div {
+      margin-bottom: 30px;
+
+      label {
+        font-size: 1.1rem;
+        text-align: center;
+        color:#888;
+        display: inline-block;
+        width: 10%;
+        margin-right: 10px;
+      }
+  
+      input {
+        width: 45%;
+        margin-bottom: 10px;
+        padding: 6px;
+      }
+
+      p {
+        padding-left: calc(10% + 10px);
+      }
+    }
+    
+    .signId {
+      width: 100%;
+
+      .idoverlapcheck {
+        margin-left: 20px;
+        padding: 8px 20px;
+        background-color: #000;
+        color:#fff;
+        border-radius: 5px;
+      }
+    }
+
+    .signpasscheck {
+      display:flex;
+      flex-wrap: wrap;
+    }
+
+    .signemail {
+
+      input {
+        width: 30%;
+      }
+
+      .signemailselect {
+        margin-left: 20px;
+        padding: 6px;
+        width: 20%;
+      }
+    }
+
+    .signphone {
+
+      input {
+        width: 20%;
+      }
+
+      .signphonecheckbox {
+        display:flex;
+
+        p {
+          display:flex;
+          align-items: center;
+
+          input {
+            width: 16px;
+            height: 16px;
+            margin-bottom: 0;
+          }
+  
+          label {
+            width: inherit;
+            padding-left: 10px;
+          }
+        }
+        
+        p:nth-of-type(2){
+          padding-left: 20px;
+        }
+      }
+    }
+
+    .signcheckbar {
+      position: fixed;
+      z-index: 100;
+      bottom:0;
+      left:0;
+      width: 100%;
+      background-color: rgba(0,0,0,0.7);
+      text-align: center;
+      margin:0 auto;
+      padding: 44px 0;
+      display:flex; // flex 로 바꾸자
+      justify-content: center;
+  
+      .signcheckBtn {
+        width: 22%;
+        display:flex;
+        justify-content: space-between;
+  
+        button {
+          font-weight: bold;
+          font-size: 1.3rem;
+          padding: 10px 50px;
+          border-radius: 5px;
+          color:#fff;
+        }
+  
+        .signcancel {
+          background-color: #aaa;
+        }
+  
+        .signcheck {
+          background-color: #000;
+        }
+      }
+    }
+    
+  }
+  
 }
