--- a/src/style/register/Register.scss
+++ b/src/style/register/Register.scss
@@ -2,7 +2,10 @@
   width: 60%;
   margin: 0 auto;
 }
-
+.photoPreview{
+  display: flex;
+  flex-wrap: wrap;
+}
 .submit {
   color: #000;
 }
@@ -13,7 +16,7 @@
     width: 202px;
     height: 202px;
     object-fit: cover;
-    margin-left: 10px;
+    margin: 5px;
     
   }
   .imgExplain{
@@ -329,8 +332,8 @@ fieldset {
           button {
             width: 100%;
             height: 40px;
-            text-align: left;
-            line-height: 40px;
+            // text-align: left;
+            // line-height: 40px;
             padding-left: 15px;
             cursor: pointer;
             font-weight: 500;
@@ -429,6 +432,7 @@ fieldset {
       border-radius: 2px;
       border: 1px solid rgb(204, 204, 204);
       background: rgb(250, 250, 250);
+      margin: 5px;
 
       input[type="file"] {
         width: 100%;
