--- a/src/style/register/Register.css
+++ b/src/style/register/Register.css
@@ -17,12 +17,33 @@
   display: flex;
   flex-wrap: wrap;
 }
-.imageInputBox img {
+.imageInputBox .previewContainer {
+  position: relative;
   width: 202px;
   height: 202px;
+}
+.imageInputBox .previewContainer img {
+  width: 100%;
+  height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
   margin: 5px;
+}
+.imageInputBox .previewContainer .imgClose {
+  position: absolute;
+  display: block;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background-color: rgba(25, 25, 25, 0.3);
+  padding: 0;
+  top: 15px;
+  right: 5px;
+}
+.imageInputBox .previewContainer .imgClose svg {
+  color: #fff;
+  margin: 0 auto;
+  pointer-events: none;
 }
 .imageInputBox .imgExplain {
   width: 100%;
