--- a/src/style/register/Register.scss
+++ b/src/style/register/Register.scss
@@ -2,27 +2,55 @@
   width: 60%;
   margin: 0 auto;
 }
-.photoPreview{
+
+.photoPreview {
   display: flex;
   flex-wrap: wrap;
 }
+
 .submit {
   color: #000;
 }
-.imageInputBox{
+
+.imageInputBox {
   display: flex;
   flex-wrap: wrap;
-  img{
+
+  .previewContainer {
+    position: relative;
     width: 202px;
     height: 202px;
-    object-fit: cover;
-    margin: 5px;
-    
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      margin: 5px;
+
+    }
+    .imgClose{
+      position: absolute;
+      display: block;
+      width: 25px ;
+      height: 25px ;
+      border-radius: 50%;
+      background-color: rgba(25, 25, 25,.3);
+      padding: 0;
+      top: 15px;
+      right: 5px;
+      svg{
+        color: #fff;
+        margin: 0 auto;
+        pointer-events: none;
+      }
+    }
   }
-  .imgExplain{
+
+  .imgExplain {
     width: 100%;
   }
 }
+
 .ProductRegisterTitle {
   height: 100px;
   color: rgb(25, 25, 25);
