--- a/src/style/register/Register.css
+++ b/src/style/register/Register.css
@@ -362,6 +362,9 @@ fieldset .inputContainer #imageInput {
   background: rgb(250, 250, 250);
   margin: 5px;
 }
+fieldset .inputContainer #imageInput.on {
+  outline: 1px solid rgb(245, 126, 0) !important;
+}
 fieldset .inputContainer #imageInput input[type=file] {
   width: 100%;
   height: 100%;
