--- a/src/style/register/Register.scss
+++ b/src/style/register/Register.scss
@@ -28,17 +28,19 @@
       margin: 5px;
 
     }
-    .imgClose{
+
+    .imgClose {
       position: absolute;
       display: block;
-      width: 25px ;
-      height: 25px ;
+      width: 25px;
+      height: 25px;
       border-radius: 50%;
-      background-color: rgba(25, 25, 25,.3);
+      background-color: rgba(25, 25, 25, .3);
       padding: 0;
       top: 15px;
       right: 5px;
-      svg{
+
+      svg {
         color: #fff;
         margin: 0 auto;
         pointer-events: none;
@@ -461,6 +463,10 @@ fieldset {
       border: 1px solid rgb(204, 204, 204);
       background: rgb(250, 250, 250);
       margin: 5px;
+
+      &.on {
+        outline: 1px solid rgb(245, 126, 0) !important;
+      }
 
       input[type="file"] {
         width: 100%;
