--- a/src/style/detailItem/detailItem.scss
+++ b/src/style/detailItem/detailItem.scss
@@ -7,8 +7,8 @@
   .detailItemImg {
     margin-right: 40px;
     flex-shrink: 0;
-    width: 430px;
-    height: 430px;
+    width: 40%;
+
 
     img {
       width: 100%;
@@ -17,8 +17,8 @@
     }
   }
 
-  & > div {
-    width: 100%;
+  &>div {
+    flex: 1;
 
     .mainInfo {
       padding-bottom: 30px;
@@ -151,19 +151,18 @@
       -webkit-box-pack: justify;
       justify-content: space-between;
 
-      & > * {
+      &>* {
         width: 31%;
         text-align: center;
       }
 
-      & > div {
+      &>div {
         position: relative;
 
         button {
           width: 100%;
           height: 100%;
           padding: 20px;
-
           color: rgb(255, 255, 255);
           display: flex;
           -webkit-box-align: center;
@@ -171,21 +170,26 @@
           -webkit-box-pack: center;
           justify-content: center;
           line-height: 1;
+
           span {
             margin: 0 3px;
             font-weight: 800;
           }
         }
       }
+
       .btnWish {
         background-color: #aaa;
       }
+
       .btnWishActive {
         background-color: #222;
       }
+
       .btnChat {
         background-color: orange;
       }
+
       .btnOrder {
         background-color: red;
       }
@@ -193,35 +197,160 @@
 
   }
 }
+
 .contentInfo {
   border-bottom: 1.5px solid black;
+
   .contentInfoHeader {
     display: flex;
     justify-content: flex-end;
+
     div {
       width: 25px;
       height: 25px;
       margin: 10px 5px;
+
       img {
         width: 100%;
         height: 100%;
         object-position: center center;
       }
-      svg{
+
+      svg {
         width: 70%;
         height: 70%;
         margin: 3.75px auto;
         color: white;
       }
-      &:nth-child(2){
+
+      &:nth-child(2) {
         background-color: #3B5998;
       }
-      &:nth-child(3){
+
+      &:nth-child(3) {
         background-color: #55ACEE;
       }
-      &:last-child{
+
+      &:last-child {
         background-color: transparent;
       }
     }
+  }
+}
+
+.otherProduct {
+  display: flex;
+  justify-content: space-between;
+  margin: 30px 0;
+  p{
+
+  }
+  div{
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    font-size: 18px;
+    font-weight: 600;
+    
+  
+    span{
+      position: relative;
+      z-index: 2;
+      display: flex;
+      flex-direction: row;
+      -webkit-box-align: center;
+      align-items: center;
+      -webkit-box-pack: center;
+      justify-content: center;
+      padding: 0px 6px;
+      margin-left: 4px;
+      border-radius: 12px;
+      border: 1px solid rgb(195, 194, 204);
+      font-weight: 400;
+      font-size: 16px;
+      img{
+        display: inline-block;
+        margin-left: 1px;
+      }
+    }
+  }
+
+}
+
+.swiperContainer {
+  width: 100%;
+  margin-bottom: 50px;
+
+  &>div {
+    height: 100%;
+
+    .swiper-slide {
+
+      .detailItemImg {
+        img {
+          width: 100%;
+        }
+      }
+
+      .slideProduct {
+        display: block;
+        margin-top: 10px;
+        width: 100%;
+        overflow-x: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        text-align: center;
+        line-height: 1.4;
+        font-size: 13px;
+      }
+
+
+    }
+  }
+
+}
+
+
+
+.swiper-button-next,
+.swiper-button-prev {
+  cursor: pointer;
+  z-index: 11;
+  width: 40px;
+  height: 40px;
+  background: rgb(255, 255, 255);
+  opacity: 0.6;
+  top: 50%;
+  transform: translateY(-50%);
+  position: absolute;
+  display: flex;
+  -webkit-box-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  align-items: center;
+}
+
+.swiper-button-next {
+  right: 0px;
+
+  &::after {
+    content: '';
+    background: url(https://m.bunjang.co.kr/pc-static/resource/593d36bc17825240e687.png) 50% 50% no-repeat;
+    background-size: contain;
+    width: 12px;
+    height: 12px;
+  }
+
+}
+
+.swiper-button-prev {
+  left: 0;
+
+  &::after {
+    content: '';
+    background: url(https://m.bunjang.co.kr/pc-static/resource/74821b5e835955696b91.png) 50% 50% no-repeat;
+    background-size: contain;
+    width: 12px;
+    height: 12px;
   }
 }
