--- a/src/style/register/Register.scss
+++ b/src/style/register/Register.scss
@@ -1,7 +1,7 @@
-.inner {
-  width: 60%;
-  margin: 0 auto;
-}
+// .inner {
+//   width: 60%;
+//   margin: 0 auto;
+// }
 
 .photoPreview {
   display: flex;
