--- a/src/style/chat/chat.css
+++ b/src/style/chat/chat.css
@@ -5,37 +5,39 @@
   margin: 0 auto;
   text-align: none;
   display: flex;
+  margin-top: -1px;
 }
 .chatList > div {
   flex: 1;
 }
 .chatList .chatList_left {
-  padding: 10px;
   height: 100%;
 }
 .chatList .chatList_left .chatList_header {
+  padding: 20px 0;
   position: relative;
+  border-bottom: 1px solid rgb(212, 212, 212);
 }
-.chatList .chatList_left .chatList_header span {
+.chatList .chatList_left .chatList_header > span {
   cursor: pointer;
   padding: 5px;
   position: absolute;
   right: 10px;
+  text-decoration: underline;
 }
-.chatList .chatList_left .chatList_inner {
-  margin-top: 40px;
-  overflow-y: scroll;
-  height: 640px;
-}
-.chatList .chatList_left .chatList_inner .chatList_inner_listType {
+.chatList .chatList_left .chatList_header .chatList_inner_listType {
   text-align: left;
 }
-.chatList .chatList_left .chatList_inner .chatList_inner_listType .chatList_inner_listType_type {
+.chatList .chatList_left .chatList_header .chatList_inner_listType .chatList_inner_listType_type {
   cursor: pointer;
   display: inline-block;
   padding: 8px 15px;
-  font-size: 1.5em;
+  font-size: 2em;
   font-weight: 600;
+}
+.chatList .chatList_left .chatList_inner {
+  overflow-y: scroll;
+  height: 640px;
 }
 .chatList .chatList_left .chatList_inner .chatList_inner_roomList {
   margin: 0;
@@ -50,15 +52,30 @@
   cursor: pointer;
 }
 .chatList .chatList_left .chatList_inner .chatList_inner_roomList li .chatList_inner_chatRoomLink_img {
+  position: relative;
   width: 60px;
   height: 60px;
+  background-color: #CCC;
+  border-radius: 50%;
 }
 .chatList .chatList_left .chatList_inner .chatList_inner_roomList li .chatList_inner_chatRoomLink_img img {
+  position: relative;
   border-radius: 50%;
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+  z-index: 2;
+}
+.chatList .chatList_left .chatList_inner .chatList_inner_roomList li .chatList_inner_chatRoomLink_img svg {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 70%;
+  height: 70%;
+  color: white;
+  z-index: 1;
 }
 .chatList .chatList_left .chatList_inner .chatList_inner_roomList li .chatList_inner_chatRoomLink_contents {
   margin-left: 10px;
