--- a/src/style/detailItem/detailItem.scss
+++ b/src/style/detailItem/detailItem.scss
@@ -4,21 +4,99 @@
   padding: 30px 0px;
   border-top: 1px solid rgb(63, 63, 63);
 
-  .detailItemImg {
-    margin-right: 40px;
-    flex-shrink: 0;
+
+
+  .productSwiper {
     width: 40%;
+    margin-right: 40px;
+
+    &>div {
+      width: 100%;
+    }
+
+    .swiper {
+      height: 100%;
+      overflow: visible;
+    }
+
+    .swiper-button-next,
+    .swiper-button-prev {
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;
+      background: rgba(33, 33, 33, 0.35);
+      opacity: 1;
+      display: none;
+
+    }
+
+    .on {
+
+      .swiper-button-next,
+      .swiper-button-prev {
+        display: flex;
+      }
+    }
+
+    .swiper-button-next {
+      right: 10px;
+
+      &::after {
+        background-image: url(https://m.bunjang.co.kr/pc-static/resource/086e98d9e0b1bc50a763.png);
+      }
+    }
+
+    .swiper-button-prev {
+      left: 10px;
+
+      &::after {
+        background-image: url(https://m.bunjang.co.kr/pc-static/resource/8c3af341bcc305c7e562.png);
+      }
+    }
+
+    .swiper-pagination {
+      top: unset;
+      bottom: -25px;
+
+      .swiper-pagination-bullet {
+        background: none;
+        width: 10px;
+        height: 10px;
+        opacity: 0.6;
+        border: 1px solid rgb(136, 136, 136);
+        border-radius: 50%;
+        box-sizing: border-box;
+      }
+
+      .swiper-pagination-bullet-active {
+        margin-right: 10px;
+        background: rgb(33, 33, 33);
+        border: 0px;
+      }
+    }
 
 
-    img {
+
+    .detailItemImg {
+      display: block;
       width: 100%;
       height: 100%;
-      object-fit: cover;
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+
     }
+
   }
 
-  &>div {
+  &>div:last-child {
     flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
     .mainInfo {
       padding-bottom: 30px;
@@ -242,18 +320,18 @@
   display: flex;
   justify-content: space-between;
   margin: 30px 0;
-  p{
 
-  }
-  div{
+  p {}
+
+  div {
     display: flex;
     -webkit-box-align: center;
     align-items: center;
     font-size: 18px;
     font-weight: 600;
-    
-  
-    span{
+
+
+    span {
       position: relative;
       z-index: 2;
       display: flex;
@@ -268,7 +346,8 @@
       border: 1px solid rgb(195, 194, 204);
       font-weight: 400;
       font-size: 16px;
-      img{
+
+      img {
         display: inline-block;
         margin-left: 1px;
       }
@@ -287,8 +366,11 @@
     .swiper-slide {
 
       .detailItemImg {
+
         img {
           width: 100%;
+          height: 140px;
+          object-fit: cover;
         }
       }
 
@@ -353,4 +435,148 @@
     width: 12px;
     height: 12px;
   }
+}
+
+.detailSecond {
+  display: flex;
+
+  &>div {
+    color: #212121;
+
+    h3 {
+      font-size: 16px;
+      padding: 48px 0px 16px;
+      border-bottom: 1px solid rgb(238, 238, 238);
+    }
+  }
+
+  &>div:first-child {
+    width: 70%;
+    padding-right: 30px;
+    box-sizing: border-box;
+    border-right: 1px solid rgb(238, 238, 238);
+
+    p {
+      white-space: pre-wrap;
+      overflow-wrap: break-word;
+      margin: 15px 0px;
+      line-height: 1.5;
+      font-size: 13px;
+    }
+
+    .infoList {
+      padding: 20px 0px;
+      border-top: 1px solid rgb(238, 238, 238);
+      border-bottom: 1px solid rgb(238, 238, 238);
+      display: flex;
+
+      li {
+        border-right: 1px solid rgb(238, 238, 238);
+        flex: 1;
+
+        p {
+          display: flex;
+          -webkit-box-align: center;
+          align-items: center;
+          -webkit-box-pack: center;
+          justify-content: center;
+          margin-bottom: 15px;
+          font-size: 13px;
+          color: rgb(178, 178, 178);
+        }
+
+        span {
+          font-size: 13px;
+          color: rgb(102, 102, 102);
+          padding: 0px 15px;
+          display: flex;
+          flex-wrap: wrap;
+          -webkit-box-pack: center;
+          justify-content: center;
+          line-height: 1.5;
+          min-height: 19px;
+          text-align: center;
+          word-break: keep-all;
+        }
+
+        &:last-child {
+          border: none;
+        }
+      }
+    }
+
+    .similarProduct {
+      display: flex;
+      column-gap: 16px;
+      width: 100%;
+      padding: 24px;
+      border: 1px solid rgb(238, 238, 238);
+      margin-bottom: 16px;
+
+      li {
+        width: 50%;
+        display: flex;
+        justify-content: space-between;
+ 
+          height: 128px;
+
+          .detailItemImg {
+            display: block;
+            width: 35%;
+            height: 100%;
+
+            img {
+              height: 100%;
+              width: 100%;
+              object-fit: cover;
+            }
+          }
+
+          &>div {
+            display: flex;
+            flex-direction: column;
+            -webkit-box-pack: center;
+            justify-content: center;
+            width: calc(100% - 110px);
+            padding-left: 12px;
+            box-sizing: border-box;
+
+            .similarProductPrice {
+              color: rgb(33, 33, 33);
+              font-size: 15px;
+              font-weight: 700;
+              margin-bottom: 6px;
+            }
+
+            p:nth-child(2) {
+              font-size: 14px;
+              line-height: 18px;
+              max-height: 36px;
+              color: rgb(113, 112, 126);
+              margin-bottom: 16px;
+              overflow: hidden;
+              text-overflow: ellipsis;
+              word-break: break-all;
+              display: -webkit-box;
+              -webkit-line-clamp: 2;
+              -webkit-box-orient: vertical;
+            }
+
+            span {
+              font-size: 12px;
+              color: rgb(178, 178, 178);
+              display: block;
+            }
+          }
+      }
+    }
+
+  }
+
+  &>div:last-child {
+    flex: 1;
+    padding: 0 30px;
+
+  }
+
 }
