--- a/src/style/detailItem/detailItem.css
+++ b/src/style/detailItem/detailItem.css
@@ -348,6 +348,7 @@
 
 .detailSecond {
   display: flex;
+  margin-bottom: 50px;
 }
 .detailSecond > div {
   color: #212121;
@@ -472,7 +473,22 @@
   margin-bottom: 16px;
 }
 .detailSecond > div:last-child .userInfo .profileImg {
+  position: relative;
   margin-right: 16px;
+  width: 48px;
+  height: 48px;
+  text-align: center;
+  line-height: 48px;
+  border: 1px solid #0a0a0a;
+  border-radius: 50%;
+}
+.detailSecond > div:last-child .userInfo .profileImg svg {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 24px;
+  height: 24px;
 }
 .detailSecond > div:last-child .userInfo .profileImg img {
   border-radius: 50%;
