header, sign css 수정 및 sign 페이지 수정 from yang2
header main content 부분의 버튼 padding 삭제,
sign form css 수정 및 sign 페이지 리뉴얼

2023-12-05

--- a/src/style/header/header.css
+++ b/src/style/header/header.css
@@ -161,6 +161,9 @@ header .HeaderMain .headerMainWrap .HeaderContents {
   width: 100%;
   /* 헤더메인부분의 오른쪽에 위치한 메뉴들 판매하기, 내상점, 번개톡 -------------------------------------------------------------- */
 }
+header .HeaderMain .headerMainWrap .HeaderContents button {
+  padding: 0;
+}
 header .HeaderMain .headerMainWrap .HeaderContents .HeaderMainMenu {
   display: flex;
   /* 헤더메인부분 오른쪽 위치한 메뉴 판매하기, 내상점 -------------------------------------------------------------- */
