--- a/src/style/signup/signup.css
+++ b/src/style/signup/signup.css
@@ -2,61 +2,91 @@
   width: 68%;
   margin: 0 auto;
   padding: 80px 0;
+  text-align: center;
 }
 .signup .signtitle {
   font-size: 2rem;
   font-weight: bold;
 }
+.signup .signsubtitle {
+  margin-top: 30px;
+  font-weight: bold;
+}
 .signup .signForm {
-  padding-left: 40px;
-  margin-top: 60px;
+  margin: 60px auto 0;
+  width: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  flex-direction: column;
 }
 .signup .signForm div {
-  margin-bottom: 30px;
-}
-.signup .signForm div label {
-  font-size: 1.1rem;
-  text-align: center;
-  color: #888;
-  display: inline-block;
-  width: 10%;
-  margin-right: 10px;
+  margin-bottom: 60px;
+  width: 100%;
+  text-align: left;
 }
 .signup .signForm div input {
-  width: 45%;
   margin-bottom: 10px;
   padding: 6px;
-}
-.signup .signForm div p {
-  padding-left: calc(10% + 10px);
+  width: 100%;
+  border: none;
+  border-bottom: 1px solid #888;
+  outline: none;
 }
 .signup .signForm .signId {
-  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-wrap: wrap;
+}
+.signup .signForm .signId input {
+  width: 56%;
 }
 .signup .signForm .signId .idoverlapcheck {
-  margin-left: 20px;
   padding: 8px 20px;
   background-color: #000;
   color: #fff;
   border-radius: 5px;
 }
+.signup .signForm .signId .inputid {
+  color: red;
+}
+.signup .signForm .signpass {
+  position: relative;
+}
+.signup .signForm .signpass i {
+  position: absolute;
+  top: 8px;
+  right: 10px;
+  cursor: pointer;
+}
 .signup .signForm .signpasscheck {
-  display: flex;
-  flex-wrap: wrap;
+  position: relative;
+}
+.signup .signForm .signpasscheck i {
+  position: absolute;
+  top: 8px;
+  right: 10px;
+  cursor: pointer;
 }
 .signup .signForm .signemail input {
-  width: 30%;
+  width: 55%;
 }
 .signup .signForm .signemail .signemailselect {
   margin-left: 20px;
   padding: 6px;
-  width: 20%;
+  width: 40%;
+}
+.signup .signForm .signphone {
+  margin-bottom: 0;
 }
 .signup .signForm .signphone input {
-  width: 20%;
+  width: 100%;
 }
 .signup .signForm .signphone .signphonecheckbox {
   display: flex;
+  margin-top: 20px;
 }
 .signup .signForm .signphone .signphonecheckbox p {
   display: flex;
@@ -75,27 +105,20 @@
   padding-left: 20px;
 }
 .signup .signForm .signcheckbar {
-  position: fixed;
-  z-index: 100;
-  bottom: 0;
-  left: 0;
   width: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
-  text-align: center;
   margin: 0 auto;
-  padding: 44px 0;
-  display: flex;
-  justify-content: center;
 }
 .signup .signForm .signcheckbar .signcheckBtn {
-  width: 22%;
+  width: 400px;
+  margin-bottom: 0;
+  padding: 20px 0;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 .signup .signForm .signcheckbar .signcheckBtn button {
   font-weight: bold;
   font-size: 1.3rem;
-  padding: 10px 50px;
+  padding: 6px 30px;
   border-radius: 5px;
   color: #fff;
 }
