--- a/src/style/signup/signup.scss
+++ b/src/style/signup/signup.scss
@@ -2,77 +2,113 @@
   width: 68%;
   margin:0 auto;
   padding: 80px 0;
+  text-align: center;
 
   .signtitle {
     font-size: 2rem;
     font-weight: bold;
   }
 
+  .signsubtitle {
+    margin-top: 30px;
+    font-weight: bold;
+  }
+
   .signForm {
-    padding-left: 40px;
-    margin-top: 60px;
+    margin: 60px auto 0;
+    width: 400px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
 
     div {
-      margin-bottom: 30px;
-
-      label {
-        font-size: 1.1rem;
-        text-align: center;
-        color:#888;
-        display: inline-block;
-        width: 10%;
-        margin-right: 10px;
-      }
+      margin-bottom: 60px;
+      width: 100%;
+      text-align:left;
   
       input {
-        width: 45%;
         margin-bottom: 10px;
         padding: 6px;
+        width: 100%;
+        border:none;
+        border-bottom:1px solid #888;
+        outline: none;
       }
 
       p {
-        padding-left: calc(10% + 10px);
+        // padding-left: calc(10% + 10px);
       }
     }
     
     .signId {
-      width: 100%;
+      display:flex;
+      justify-content: space-between;
+      align-items: flex-start;
+      flex-wrap: wrap;
+
+      input {
+        width: 56%; 
+      }
 
       .idoverlapcheck {
-        margin-left: 20px;
         padding: 8px 20px;
         background-color: #000;
         color:#fff;
         border-radius: 5px;
       }
+
+      .inputid {
+        color:red;
+      }
+    }
+
+    .signpass{
+      position: relative;
+
+      i {
+        position: absolute;
+        top:8px;
+        right:10px;
+        cursor: pointer;
+      }
     }
 
     .signpasscheck {
-      display:flex;
-      flex-wrap: wrap;
+      position: relative;
+
+      i {
+        position: absolute;
+        top:8px;
+        right:10px;
+        cursor: pointer;
+      }
     }
 
     .signemail {
 
       input {
-        width: 30%;
+        width: 55%;
       }
 
       .signemailselect {
         margin-left: 20px;
         padding: 6px;
-        width: 20%;
+        width: 40%;
       }
     }
 
     .signphone {
+      margin-bottom: 0;
 
       input {
-        width: 20%;
+        width: 100%;
       }
 
       .signphonecheckbox {
         display:flex;
+        margin-top: 20px;
 
         p {
           display:flex;
@@ -97,27 +133,20 @@
     }
 
     .signcheckbar {
-      position: fixed;
-      z-index: 100;
-      bottom:0;
-      left:0;
       width: 100%;
-      background-color: rgba(0,0,0,0.7);
-      text-align: center;
       margin:0 auto;
-      padding: 44px 0;
-      display:flex; // flex 로 바꾸자
-      justify-content: center;
   
       .signcheckBtn {
-        width: 22%;
+        width: 400px;
+        margin-bottom: 0;
+        padding: 20px 0;
         display:flex;
-        justify-content: space-between;
+        justify-content: space-evenly;
   
         button {
           font-weight: bold;
           font-size: 1.3rem;
-          padding: 10px 50px;
+          padding: 6px 30px;
           border-radius: 5px;
           color:#fff;
         }
